Chapter_05/kubernetes-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-api
  namespace: production
  labels:
    app: web-api
spec:
  type: ClusterIP
  selector:
    app: web-api
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
